# Tpay

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sjk/tpay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sjk/tpay/: ActMain.java  HKApplication.java  HookAlipay.java  HookBase.java  HookWechat.java  Params.java  ReceiverMain.java  Security.java  ServiceMain.java  ServiceProtect.java
app/src/main/java/com/sjk/tpay/bll/: ApiBll.java
app/src/main/java/com/sjk/tpay/po/: AuthorizeBean.java  BaseMsg.java  Configure.java  FinishTaskBean.java  PaySuccessBean.java  QrBean.java  QrResultBean.java
app/src/main/java/com/sjk/tpay/request/: FastJsonRequest.java
app/src/main/java/com/sjk/tpay/utils/: LogUtils.java  PayUtils.java  SaveUtils.java  StrEncode.java
app/src/main/jni/: CMakeLists.txt  security.cpp  util.cpp
app/src/main/jni/includes/: util.h
app/src/main/res/layout/: act_main.xml
gradle/wrapper/: gradle-wrapper.properties
